--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#ff4b7e"
-backgroundColor="#e7fbff"
+backgroundColor="#bee1f5"
 secondaryBackgroundColor="#f0f5f6"
-textColor="#000000"
+textColor="#080056"
 font="serif"
