--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#ff4b7e"
-backgroundColor="#bee1f5"
+backgroundColor="#D0EBF7"
 secondaryBackgroundColor="#f0f5f6"
 textColor="#080056"
 font="serif"
